<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".profInfo">

    <TextView
        android:id="@+id/professorNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/professorFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_field"
        android:textSize="18sp"
        android:textColor="#757575"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/professorDegreeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_degree"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/professorUnivTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_university"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/professorEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_email"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/professorWebsiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_website"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/professorLabTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_lab"
        android:textSize="16sp" />

</LinearLayout>